Fixed the scrollbar showing up when sorting items in the object nav

--- a/src/ggrc/assets/stylesheets/_layout.scss
+++ b/src/ggrc/assets/stylesheets/_layout.scss
@@ -47,6 +47,7 @@
   position:fixed;
   top:85px;
   overflow-y:auto;
+  overflow-x:hidden;
 }
 .object-area {
   position:fixed;
